@@ -4,6 +4,8 @@ Please note that the git era changelog isn't complete regarding internal adjustm
 Only things that are major architecture change or might break compatibility with MediaWiki
 versions and other extensions is collected here.
 
+; 2021-09-20: v2.5.3, by Universal Omega
+* Replace the deprecated InternalParseBeforeSanitize hook with the ParserAfterParse hook
 
 ; 2019-07-11: v2.5.2, by MGChecker
 * Removal of PHP entry point, use wfLoadExtension( 'Variables' ) instead
